2004-03-17  Marcus Brinkmann  <marcus@gnu.org>

	* sysdeps/l4/pt-spin.c (_pthread_spin_lock): Implement using new
	time period interface.

2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>

	Many changes throughout all files, converting L4 specific source
	code to the GNU libl4 interface.  Integration into the hurd-l4
	infrastructure.

2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* Makefile (install): Do not install from $(srcdir).

2002-11-26  Neal H. Walfield  <neal@cs.uml.edu>

	* pthread/pt-create.c [HAVE_USELOCAL]: Include <locale.h>.
	(entry_point) [HAVE_USELOCALE]: Initialize the thread to the
	global locale.

2002-11-25  Neal H. Walfield  <neal@cs.uml.edu>

	* sysdeps/mach/hurd/i386/pt-setup.c (__pthread_setup): Fix last
	change.

2002-11-18  Neal H. Walfield  <neal@cs.uml.edu>

	* sysdeps/mach/pt-wakeup.c (__pthread_wakeup): Use the size of
	THREAD->wakeupmsg which may not be a mach_msg_header_t.

	* sysdeps/generic/pt-mutex-timedlock.c
	(__pthread_mutex_timedlock_internal): Really test for equality.
	* sysdeps/generic/pt-rwlock-timedrdlock.c
	(__pthread_rwlock_timedrdlock_internal): Likewise.
	* sysdeps/generic/pt-rwlock-timedwrlock.c
	(__pthread_rwlock_timedwrlock_internal): Likewise.

	* sysdeps/generic/pt-cond-timedwait.c
	(__pthread_cond_timedwait_internal): On timeout, remove our thread
	structure from the wait queue if necessary.

	* sysdeps/l4/pt-start.c (__pthread_start): Call L4_Myself, not
	__mach_thread_self.

	* sysdeps/mach/hurd/i386/pt-setup.c: Include <mach.h>.
	(__pthread_setup): Do not leak references from __mach_thread_self.
	* sysdeps/mach/hurd/pt-docancel.c (__pthread_do_cancel): Likewise.
	* sysdeps/mach/hurd/pt-sysdep.h (_pthread_self): Likewise.
	* sysdeps/mach/pt-thread-alloc.c (__pthread_thread_alloc): Likewise.
	* sysdeps/mach/pt-thread-start.c (__pthread_thread_start): Likewise.

	* sysdeps/mach/pt-start.c: Remove dead file.

2002-11-09  Roland McGrath  <roland@frob.com>
